--- a/index.html
+++ b/index.html
@@ -47,5 +47,7 @@
 
 <div id="message" class="center message">You Won!</div>
 
+<div id="message" class="center message">You Loss!</div>
+
 <script src="js/main.js"></script>
 </body>
