--- a/index.html
+++ b/index.html
@@ -20,13 +20,7 @@
     <button type="button" class="lever" onclick="spin()">Lever</button>
 </div>
 
-</body>
-</html>
-
-
-
-<!-- single row ... the three colums will represent the numbers in the slot machine - - >  -->
-
+<div>
 <table class="center">
     <tbody>
         <tr>
@@ -42,12 +36,15 @@
         </tr>
     </tbody>
 </table>
+</div>
 
  <!-- This div will represent a message that appears when all three numbers match -->
 
-<div id="message" class="center message">You Won!</div>
-
-<div id="message" class="center message">You Loss!</div>
+<div id="message">You Won!</div>
 
 <script src="js/main.js"></script>
+
 </body>
+</html>
+
+
