--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     
  <div class="jumbotron jumbotron-fluid">
     <div class="container">
-        <h1 class="display-4">Play Slot!</h1>
+        <h1 class="display-4">Slot Machine!</h1>
         <hr class="my-4" />
-        <h2>Hit lever button to start</h2>
+        <h2>How many clicks will it take?</h2>
     </div>
 </div>
 <div class="center-lever">
@@ -46,5 +46,4 @@
 
 </body>
 </html>
-
 
